tests/syntax-error/DuplicateTypeSignature.vix
test : Size
test : Size
test = 123
